5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4353/executions/1649_2445.log
== TEST (2019-04-16 15:28:01) 
-- CODE:
a=input("em que temperatura esta representada: ")
b=float(input("valor da temperatura: "))
fi=5/9*(b-32)
ci=b*1.8+32
if(a.upper()=="F"):
	print(round(fi,2))
else:
	if(a.upper()=="C")
	print(round(ci,2))
-- ERROR:
File "XXXX", line 8
    if(a.upper()=="C")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:28:20) 
-- CODE:
a=input("em que temperatura esta representada: ")
b=float(input("valor da temperatura: "))
fi=5/9*(b-32)
ci=b*1.8+32
if(a.upper()=="F"):
	print(round(fi,2))
else:
	if(a.upper()=="C")
	print(round(ci,2))
-- ERROR:
File "XXXX", line 8
    if(a.upper()=="C")
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:28:29) 
-- CODE:
a=input("em que temperatura esta representada: ")
b=float(input("valor da temperatura: "))
fi=5/9*(b-32)
ci=b*1.8+32
if(a.upper()=="F"):
	print(round(fi,2))
else:
	if(a.upper()=="C"):
	print(round(ci,2))
-- ERROR:
File "XXXX", line 9
    print(round(ci,2))
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:29:12) 
-- CODE:
a=input("em que temperatura esta representada: ")
b=float(input("valor da temperatura: "))
fi=5/9*(b-32)
ci=b*1.8+32
if(a.upper()=="F"):
	print(round(fi,2))
else:
if(a.upper()=="C"):
		print(round(ci,2))
-- ERROR:
File "XXXX", line 8
    if(a.upper()=="C"):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 15:29:23) 
-- CODE:
a=input("em que temperatura esta representada: ")
b=float(input("valor da temperatura: "))
fi=5/9*(b-32)
ci=b*1.8+32
if(a.upper()=="F"):
	print(round(fi,2))
else:
	if(a.upper()=="C"):
		print(round(ci,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:29:33) 
-- CODE:
a=input("em que temperatura esta representada: ")
b=float(input("valor da temperatura: "))
fi=5/9*(b-32)
ci=b*1.8+32
if(a.upper()=="F"):
	print(round(fi,2))
else:
	if(a.upper()=="C"):
		print(round(ci,2))
-- EXECUTION TIME:
0.181182
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
